$Id: History,v 1.8 2000-11-20 18:17:25 gcosmo Exp $
----------------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

           History file for geometry/solids/STEPinterface
	   ----------------------------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

20th November 2000  Gabriele Cosmo  (stepinterface-V02-00-02)
- Fixes to remove warnings from "-Wall -ansi -pedantic" g++ compiler options:
  o commented out variables declared and not used.
  o fixed declaration of variables used before being initialised.
  o fixed order of initialisation of member data in constructors.
  o fixed usage of unsigned-int (size_t) for array indeces.

10th November 2000  Gabriele Cosmo  (stepinterface-V02-00-01)
- Added GetInstanceManager() method to G4GeometryCreator.

09th November 2000  Gabriele Cosmo  (stepinterface-V02-00-00)
- QA code revision and cleanup (+fixes from CodeWizard filtering):
  o Changed return value to "const char*" to method Name() and made
    post-const in all creator classes.
  o Made virtual methods not inlined in G4GeometryCreator.
  o Moved public data members to protected/private in G4GeometryCreator
    and G4AssemblyCreator.
  o G4AssemblyCreator: defined private copy-constructor and operator=.
  o Fix in G4Axis2Placement3dCreator::CreateSTEPGeometry(void*) where
    G4Point3D was casted to G4Vector3D by mistake (!).
