@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4EdgeLoopCreator.cc,v 1.3 2000-02-25 16:36:18 gcosmo Exp $
+// $Id: G4EdgeLoopCreator.cc,v 1.4 2001-04-20 19:17:48 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // ----------------------------------------------------------------------
@@ -46,11 +46,11 @@ void G4EdgeLoopCreator::CreateG4Geometry(STEPentity& Ent)
     {
       TmpEnt = ((EntityNode*)Node)->node;
       void *tmp =G4GeometryTable::CreateObject(*TmpEnt);
-      if (tmp) CurveVec->append((G4Curve*)tmp);
+      if (tmp) CurveVec->push_back((G4Curve*)tmp);
       Node = Node->NextNode();
     }      
 
-  G4int EdgeNum = CurveVec->entries();
+  G4int EdgeNum = CurveVec->size();
   if (EdgeNum != EdgeCount)
     G4cerr << "WARNING - G4EdgeLoopCreator::CreateG4Geometry" << G4endl
            << "\tTotal of " << EdgeNum << " G4Curve components created, out of "
