@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4GeometryTable.cc,v 1.7 2000-11-20 18:17:31 gcosmo Exp $
+// $Id: G4GeometryTable.cc,v 1.8 2001-04-20 19:17:48 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -38,9 +38,9 @@ G4bool G4GeometryTable::ExistsInTable(G4String& objectName)
 {
   G4bool existsInTable = false;
 
-  for(size_t a=0;a<RegisteredObjects.length();a++)
+  for(size_t a=0;a<RegisteredObjects.size();a++)
   {
-    G4GeometryCreator* gcTmp =  RegisteredObjects(a);
+    G4GeometryCreator* gcTmp =  RegisteredObjects[a];
     G4String rName = gcTmp->Name();
     if(rName == objectName) existsInTable = true;
   }
@@ -53,14 +53,14 @@ void G4GeometryTable::RegisterObject(G4GeometryCreator* gc)
   G4String newName = gc->Name();
   
   if(!ExistsInTable(newName))
-    RegisteredObjects.append(gc);
+    RegisteredObjects.push_back(gc);
 }
 
 G4GeometryCreator* G4GeometryTable::GetObject(G4String objectName)
 {
-  for(size_t a=0; a<RegisteredObjects.length(); a++)
+  for(size_t a=0; a<RegisteredObjects.size(); a++)
   {
-    G4GeometryCreator* gcTmp =  RegisteredObjects(a);
+    G4GeometryCreator* gcTmp =  RegisteredObjects[a];
     G4String rName = gcTmp->Name();
     
     if(rName == objectName)
@@ -133,7 +133,7 @@ void G4GeometryTable::PrintObjectNames()
   G4GeometryCreator* gc=0;
   G4int a=0;
 
-  G4int objectCount = RegisteredObjects.length();
+  G4int objectCount = RegisteredObjects.size();
   if(!objectCount)
     {
       G4cout << "No registered objects in table." << G4endl;
