@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ShapeRepresentationCreator.cc,v 1.3 2000-02-25 16:36:20 gcosmo Exp $
+// $Id: G4ShapeRepresentationCreator.cc,v 1.4 2001-04-20 19:17:49 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -57,11 +57,11 @@ void G4ShapeRepresentationCreator::CreateG4Geometry(STEPentity& Ent)
       place =(G4Axis2Placement3D*)G4GeometryTable::CreateObject(*TmpEnt);
 
       if (place)
-        placements->append(place);
+        placements->push_back(place);
       en = (EntityNode*)en->NextNode();
     }
   
-  G4int placementNum = placements->entries();
+  G4int placementNum = placements->size();
   if (placementNum != placementCount)
     G4cerr << "WARNING - G4ShapeRepresentationCreator::CreateG4Geometry" << G4endl
            << "\tTotal of " << placementNum << " G4Axis2Placement3D components created, out of "
