@@ -1,4 +1,4 @@
-$Id: History,v 1.8 2000-11-20 18:17:25 gcosmo Exp $
+$Id: History,v 1.9 2001-04-20 19:17:47 gcosmo Exp $
 ----------------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,12 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+20th April 2001  Gabriele Cosmo (stepinterface-V03-01-00)
+- Migration to STL vector:
+  o G4GeometryCreator, migrated typedefs: G4PlacedSolidVector,
+    G4SurfaceVector, G4SolidVector.
+  o G4GeometryTable, migrated typedef G4CreatorVector.
 
 20th November 2000  Gabriele Cosmo  (stepinterface-V02-00-02)
 - Fixes to remove warnings from "-Wall -ansi -pedantic" g++ compiler options:
